# sfml-chess

./: .gitignore  CMakeLists.txt  README.md  SFML-Chess.sln
SFML-Chess/: Bishop.cpp  SFML-Chess.vcxproj  SFML-Chess.vcxproj.filters
SFML-Chess/src/: Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  Highlights.cpp  Highlights.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  PiecesBuffer.cpp  PiecesBuffer.hpp  PromoteOption.cpp  PromoteOption.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
